[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

multihash = {version = "0.15.0", features = ["serde-codec"]}
primitive-types = "0.10.1"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
libp2p = {git = "https://github.com/libp2p/rust-libp2p.git", rev = "e15dad5f45a9ae804b7a27bd6f885a1b00e0525a", features=["tcp-tokio"]}